--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,7 @@
 - specify per-coastline padding
 - object oriented jscad files, with custom translation methods, etc.
+- import reprap design guidelines
+- pluggable package sources - github support, heirloom tech package source
+- one-click pushing to github / forking
+- event driven multi machine syncronization - opencv, external sensor, etc
+- description of the master controller scheme
